# malachite

Specs/Quint/: decideForPastRound.qnt  line42run.qnt
Specs/Quint/old-tests/: decideForPastRound.qnt  line26run.qnt  line28run.qnt
code/: Cargo.toml  config.toml
code/actors/src/: gossip.rs
code/crates/abci/app/: Cargo.toml
code/crates/abci/host/: Cargo.toml
code/crates/abci/p2p-proto/: Cargo.toml
code/crates/abci/p2p-types/: Cargo.toml
code/crates/actors/: Cargo.toml
code/crates/actors/src/: block_sync.rs  consensus.rs  gossip_consensus.rs  gossip_mempool.rs  host.rs  node.rs
code/crates/blocksync/: Cargo.toml
code/crates/blocksync/src/: lib.rs
code/crates/cli/: Cargo.toml
code/crates/cli/src/: args.rs  error.rs  logging.rs  main.rs  metrics.rs
code/crates/common/src/: context.rs  height.rs  proposal.rs  threshold.rs  value.rs
code/crates/consensus/: Cargo.toml
code/crates/consensus/src/: crdt.rs  effect.rs  full_proposal.rs  handle.rs  input.rs  lib.rs  macros.rs  msg.rs  state.rs  types.rs
code/crates/consensus/tests/: basic.rs
code/crates/driver/src/: driver.rs  output.rs
code/crates/gossip-consensus/: Cargo.toml
code/crates/gossip-consensus/src/: behaviour.rs  channel.rs  handle.rs  lib.rs  pubsub.rs
code/crates/gossip-mempool/: Cargo.toml
code/crates/gossip-mempool/src/: behaviour.rs  lib.rs
code/crates/kv-app/: Cargo.toml
code/crates/kv-app/src/: entry.rs  host.rs  kvmempool.rs  lib.rs  spawn.rs
code/crates/node/src/: config.rs
code/crates/proto/: build.rs
code/crates/round/src/: output.rs
code/crates/starknet-app/src/: spawn.rs
code/crates/starknet-app/tests/: n10f0.rs
code/crates/starknet-host/src/: actor.rs  mempool.rs
code/crates/starknet/app/: Cargo.toml
code/crates/starknet/host/: Cargo.toml
code/crates/starknet/p2p-proto/: build.rs
code/crates/starknet/p2p-types/: Cargo.toml
code/crates/test/src/: proposal.rs  (+2 more)
code/examples/basehost/: Cargo.toml
code/examples/basehost/src/: context.rs  decision.rs  main.rs  network.rs
code/examples/basehost/src/context/: address.rs  height.rs  peer.rs  peer_set.rs  proposals.rs  value.rs  vote.rs
code/examples/loopback/: Cargo.toml
code/examples/loopback/src/: application.rs  common.rs  context.rs  decision.rs  main.rs  network.rs  system.rs
code/examples/loopback/src/context/: address.rs  height.rs  peer.rs  peer_set.rs  proposals.rs  value.rs  vote.rs
code/gossip/src/: lib.rs
code/itf/src/: consensus.rs  driver.rs  lib.rs  types.rs  utils.rs  votekeeper.rs
code/itf/tests/: consensus.rs  driver.rs  votekeeper.rs
code/scripts/: spawn.bash  spawn.fish
docs/: adi-notes.md
specs/english/starknet/: forks.md  validator_set.md
specs/english/synchronization/: README.md
specs/quint/specs/: TendermintDSL.qnt  consensus.qnt  driver.qnt  misbehavior.qnt  statemachineAsync.qnt  types.qnt  votekeeper.qnt
specs/quint/starknet/: order.qnt  valset.qnt
(+86 files in other folders)
