[package]
name                   = "malachite-blocksync"
version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
malachite-common = { workspace = true }

derive-where     = { workspace = true }
displaydoc       = { workspace = true }
libp2p-identity  = { workspace = true, features = ["peerid"] }


[lints]
workspace = true
