[package]
name                   = "malachite-kv-app"
version.workspace      = true
edition.workspace      = true
repository.workspace   = true
license.workspace      = true
publish.workspace      = true
rust-version.workspace = true

[dependencies]
malachite-actors.workspace           = true
malachite-common.workspace           = true
malachite-node.workspace             = true
#malachite-test.workspace             = true
malachite-metrics.workspace          = true
malachite-gossip-consensus.workspace = true
malachite-gossip-mempool.workspace   = true
malachite-starknet-host.workspace    = true
malachite-starknet-app.workspace     = true

async-trait.workspace                = true
tokio.workspace   = true
rand = "0.8.5"
tracing = "0.1.40"
ractor             = { workspace = true, features = ["async-trait"] }

[lints]
# workspace = true
