[package]
name = "loopback"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
malachite-core-types    = { workspace = true }
malachite-consensus     = { workspace = true }
malachite-test          = { workspace = true }
malachite-metrics       = { workspace = true }

rand = "0.8.5"
signature = "2.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints]
workspace = true


